--- a/app/src/main/res/layout/content_shared_element.xml
+++ b/app/src/main/res/layout/content_shared_element.xml
@@ -3,32 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraint_layout_mainactivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.sagar.android_projects.animation.MainActivity"
-    tools:showIn="@layout/activity_main">
-
-    <Button
-        android:id="@+id/normal_transition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/normal_transition"
-        app:layout_constraintBottom_toTopOf="@+id/shared_element_transition"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    tools:context="com.sagar.android_projects.animation.SharedElement"
+    tools:showIn="@layout/activity_shared_element">
 
     <Button
         android:id="@+id/shared_element_transition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/shared_transition"
         android:transitionName="transition"
+        android:text="@string/shared_transition"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/normal_transition"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
